Bug 255731 - Stop marking isInvalidInputType() as friend to InputType subclasses
Summary: Stop marking isInvalidInputType() as friend to InputType subclasses
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-20 08:39 PDT by Chris Dumez
Modified: 2023-04-20 10:20 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-04-20 08:39:46 PDT
Stop marking isInvalidInputType() as friend to InputType subclasses. We just need to make a few validation function public (which they are already in the base class).
This allows us to move isInvalidInputType() to InputType.cpp, since this is the only place it is used.
Comment 1 Chris Dumez 2023-04-20 08:50:48 PDT
Pull request: https://github.com/WebKit/WebKit/pull/12975
Comment 2 EWS 2023-04-20 10:19:16 PDT
Committed 263179@main (5b1d7c243102): <https://commits.webkit.org/263179@main>

Reviewed commits have been landed. Closing PR #12975 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-04-20 10:20:27 PDT
<rdar://problem/108325034>