Stop marking isInvalidInputType() as friend to InputType subclasses https://bugs.webkit.org/show_bug.cgi?id=255731

Reviewed by Darin Adler.

Stop marking isInvalidInputType() as friend to InputType subclasses. We just
need to make a few validation function public (which they are already in the
base class). This allows us to move isInvalidInputType() to InputType.cpp,
since this is the only place it is used.

* Source/WebCore/html/BaseDateAndTimeInputType.h:
* Source/WebCore/html/ButtonInputType.h:
* Source/WebCore/html/CheckboxInputType.h:
* Source/WebCore/html/ColorInputType.h:
* Source/WebCore/html/DateInputType.h:
* Source/WebCore/html/DateTimeLocalInputType.h:
* Source/WebCore/html/EmailInputType.h:
* Source/WebCore/html/FileInputType.h:
* Source/WebCore/html/HiddenInputType.h:
* Source/WebCore/html/ImageInputType.h:
* Source/WebCore/html/InputType.cpp:
(WebCore::isInvalidInputType):
(WebCore::InputType::typeMismatchFor const): Deleted.
(WebCore::InputType::typeMismatch const): Deleted.
(WebCore::InputType::valueMissing const): Deleted.
(WebCore::InputType::hasBadInput const): Deleted.
(WebCore::InputType::patternMismatch const): Deleted.
* Source/WebCore/html/InputType.h:
(WebCore::InputType::typeMismatchFor const):
(WebCore::InputType::valueMissing const):
(WebCore::InputType::hasBadInput const):
(WebCore::InputType::patternMismatch const):
(WebCore::InputType::typeMismatch const):
(WebCore::isInvalidInputType): Deleted.
* Source/WebCore/html/MonthInputType.h:
* Source/WebCore/html/NumberInputType.h:
* Source/WebCore/html/PasswordInputType.h:
* Source/WebCore/html/RadioInputType.h:
* Source/WebCore/html/RangeInputType.h:
* Source/WebCore/html/ResetInputType.h:
* Source/WebCore/html/SearchInputType.h:
* Source/WebCore/html/SubmitInputType.h:
* Source/WebCore/html/TelephoneInputType.h:
* Source/WebCore/html/TextInputType.h:
* Source/WebCore/html/TimeInputType.h:
* Source/WebCore/html/URLInputType.h:
* Source/WebCore/html/WeekInputType.h:

Canonical link: https://commits.webkit.org/263179@main