Source/WebCore/html/NumberInputType.h
@@ -36,7 +36,6 @@
 namespace WebCore {
 
 class NumberInputType final : public TextFieldInputType {
-    template<typename DowncastedType> friend bool isInvalidInputType(const InputType&, const String&);
 public:
     static Ref<NumberInputType> create(HTMLInputElement& element)
     {
@@ -44,6 +43,8 @@ public:
     }
 
     bool typeMismatchFor(const String&) const final;
+    bool typeMismatch() const final;
+    bool hasBadInput() const final;
 
 private:
     explicit NumberInputType(HTMLInputElement& element)
@@ -56,7 +57,6 @@ private:
     double valueAsDouble() const final;
     ExceptionOr<void> setValueAsDouble(double, TextFieldEventBehavior) const final;
     ExceptionOr<void> setValueAsDecimal(const Decimal&, TextFieldEventBehavior) const final;
-    bool typeMismatch() const final;
     bool sizeShouldIncludeDecoration(int defaultSize, int& preferredSize) const final;
     float decorationWidth() const final;
     StepRange createStepRange(AnyStepHandling) const final;
@@ -67,7 +67,6 @@ private:
     String visibleValue() const final;
     String convertFromVisibleValue(const String&) const final;
     String sanitizeValue(const String&) const final;
-    bool hasBadInput() const final;
     String badInputText() const final;
     bool supportsPlaceholder() const final;
     void attributeChanged(const QualifiedName&) final;
